--- a/overdamped/Makefile
+++ b/overdamped/Makefile
@@ -1,7 +1,7 @@
 
 test.exe: main.cpp system.h system2.h vec2.h potential.h msd.h ConfigFile.h\
           diffusion.h multi_diffusion.h
-	g++ main.cpp -std=c++11 -Wall -Werror  -o test.exe -g
+	g++ main.cpp -std=c++11 -Wall -Werror  -o test.exe -O3
 
 
 
